app/assets/stylesheets/style.css.scss
@import 'icheck/square/blue';

//colors
$lightest_background: #fff;
$light_background: #f3f3f3;
$lowlight: #dde;
$normal_danger: #fe4f45;
$active_danger: #d04942;

$light_accent: #428bca;
$dark_accent: #2a6496;

//fonts
$font_header: Open Sans Condensed;

//@extend-elements
//original selectors
//a.borderedanchor, a.unborderedanchor
%extend_1 {
    padding: 1px 5px;
    margin: 1px 2px;
    //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
    border-radius: 5px;
    cursor: pointer;
    display: inline-block;
}

img#logo {
    width: 302px;
    height: 48px;
}

.top-menu {
    float: right;
    margin: 0;
    padding: 0;
    font-weight: bold;
    ul {
        display: flex;
        list-style: none;
        margin: 0;
        padding: 0;
        ul {
            display: inline;
            display: none;
            position: absolute;
            background-color: $lowlight;
            margin: 0;
            &:before {
                width: 0;
                height: 0;
                content: "";
                position: absolute;
                top: -7px;
                left: 1em;
                border-bottom: 7px solid $lowlight;
                border-left: 7px solid transparent;
                border-right: 7px solid transparent;
            }
            li {
                display: block;
            }
        }
        li:last-child ul {
            right: 0;
        }
    }
    li {
        display: inline-block;
        margin: 0;
    }
    a {
        display: inline-block;
        margin: 0;
        padding: 0.7em 1.6em;
        border-bottom: 2px solid $lightest_background;
        &:hover {
            text-decoration: none;
            background-color: $light_background;
            border-bottom: 2px solid $lowlight;
        }
    }
}
.ui-datepicker-trigger {
    float: left;
    padding: 1px;
    margin: 0 2px;
}
.ui-autocomplete-input {
    min-width: 0 !important;
}
select {
    padding: 1.1em;
}
a {
    &:hover {
        text-decoration: none;
    }
    &.borderedanchor {
        border: 1px solid $lowlight;
        @extend %extend_1;
        &:hover {
            background-color: $lowlight;
        }
    }
    &.unborderedanchor {
        @extend %extend_1;
        &:hover {
            background-color: $lowlight;
        }
    }
}
.breakdown_header {
    text-align: center;
    font-size: 200%;
    font-weight: bold;
    &:before {
        content: "INFO: ";
        font-size: 70%;
        font-weight: normal;
    }
}
h1 {
    margin: 20px 30px 0 40px;
    font-family: $font_header;
    font-size: 300%;
    float: left;
}
.flash {
    position: absolute;
    z-index: 1;
    width: 80%;
    left: 10%;
}
.alert {
    margin-bottom: 10px;
    margin-top: 10px;
}
.spacer {
    display: inline-block;
    width: 4px;
}
.icontip {
    margin: 2px;
}
td {
    .crud_button {
        cursor: pointer;
        margin: 0.2em 0.2em 0 0;
    }
    &.date {
        white-space: nowrap;
    }
}
th {
    position: relative;
    white-space: nowrap;
    .crud_button {
        position: absolute;
        top: 8px;
        right: 5px;
        cursor: pointer;
    }
}
.crud_delete {
    color: $normal_danger;
    &:hover {
        color: $active_danger;
    }
}
.ccli_populate {
    margin: 0;
    padding: 0;
    position: absolute;
    left: -5px;
    font-size: 170%;
    top: 3px;
}
.ajaxbusy {
    position: fixed;
    display: table-cell;
    background: rgba($light_background, 0.6);
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 10000;
    text-align: center;

    div {
        color: $light_accent;
        margin: auto;
        top: 30vh;
        font-size: 100px;
    }
}
.tdkey {
    font-weight: bold;
}
.song_tag_filter {
    margin: 2em;
    text-align: center;
}
.song_tag {
    background-color: $light_accent;
    color: $lowlight;
    border-radius: 3px;
    margin-right: 5px;
    padding: 3px 8px;
    font-weight: bolder;
    border: 2px solid $dark_accent;
    &:after {
        font-family: "Glyphicons Halflings";
        content:"\e041";
        vertical-align: middle;
        padding-left: 5px;
    }
    &:hover {
        cursor: pointer;
        border-color: $light_accent;
        background-color: lighten($light_accent, 20%);
        &:after {
        }
        .tipster &:after {
            content:"\e013";
            color: $dark_accent;
        }
        .song_tags &:after {
            content:"\e014";
            color: $normal_danger;
        }
    }
    .tipster &:last-of-type {
        margin-right: 0;
    }

    .song_tag_filter & {
        border-color: $light_accent;
        background-color: lighten($light_accent, 20%);
        &:hover {
            border-color: $dark_accent;
            color: $dark_accent;
        }
        &.active {
            background-color: $light_accent;
            border-color: $dark_accent;
            &:hover {
                border-color: $light_accent;
                background-color: lighten($light_accent, 10%);
            }
        }
    }

    &.stateless {
        cursor: auto;
        background-color: $lowlight;
        color: $light_accent;
        font-weight: normal;
        border: none;
        font-size: 80%;
    }
}
.ui-helper-hidden-accessible {
    display: none;
}
.tagit-label {
    vertical-align: middle;
}
#songList {
    min-height: 32px;
    margin: 1px;
    //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
    border-radius: 3px;
}
#service_date {
    min-width: 8em;
}
.songlist {
    padding: 20px;
    thead {
        font-weight: bold;
    }
    td {
        overflow: hidden;
        max-width: 80px;
    }
}
td[contenteditable="true"] {
    &:focus {
        background-color: $light_background !important;
    }
    &:active {
        background-color: $light_background !important;
    }
}
.tagit-autocomplete.ui-menu {
    //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
    border-radius: 4px;
    padding: 2px;
    padding-right: 8px;
    .ui-menu-item {
        //Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
        border-radius: 3px;
        margin: 1px;
    }
}
ul.tagit {
    width: 100%;
    background-color: $lightest_background;
    cursor: text;
}
.crud_button:hover {
    text-decoration: none;
}
a:active,
a:focus {
    outline: none;
    text-decoration: none;
}
span.ui-button-text {
    white-space: nowrap !important;
}
.servicelist td.dat {
    width: 200px;
}

.content {
    margin: 1em auto;
    width: 90%;
}

table.tableindex {
    width: 100%;
    td {
        white-space: nowrap;
    }
}

tr.user_heading td,
tr.user_heading:hover td {
    background-color: $light_accent !important;
    color: $lightest_background;
    font-weight: bold;
}
tr.church_heading td,
tr.church_heading:hover td {
    background-color: $dark_accent !important;
    color: $lowlight;
    font-weight: bold;
}

.glyphicon-spin {
    -webkit-animation: spin 2000ms infinite linear;
    animation: spin 2000ms infinite linear;
}
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}
@keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}


::-webkit-inner-spin-button {
    display: none;
}

